0.7.0 reworked image cropping - now replaced by panning to a custom center fix issue with svg images when mime type is not set

--- a/app/assets/stylesheets/sibu/defaults.scss
+++ b/app/assets/stylesheets/sibu/defaults.scss
@@ -207,6 +207,19 @@ $sibu-color3 : #333 !default;
           font-weight: bold;
         }
       }
+
+      .sibu_center {
+        position: relative;
+
+        #sibu_center_pos {
+          position: absolute;
+          z-index: 3;
+          font-size: 20px;
+          font-weight: bold;
+          color: white;
+          text-shadow: 0 2px grey;
+        }
+      }
     }
 
     #editor-container .ql-editor {
